stash work of the folder path selection

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <script>
       const remote = require('electron').remote;
       window.fs = require('fs')
+      window.electron = require('electron')
     console.log(remote.app.getVersion());
   </script>
   <body class="background">
