Abraham: Implemented project runner handler

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       const remote = require('electron').remote;
       window.fs = require('fs')
       window.electron = require('electron')
+      window.child_process = require('child_process')
     console.log(remote.app.getVersion());
   </script>
   <body class="background">
