added support for antd theming with less

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       window.process = require('process')
       window.electron = require('electron')
       window.child_process = require('child_process')
-    console.log(remote.app.getVersion());
+    // console.log(remote.app.getVersion());
   </script>
   <body class="background">
     <div id="root"></div>
